--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Swordfish{% endblock %}
+{% block title %}Projekt Pilgrimsfalk - registreringsverktyg{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -19,15 +19,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for( 'main.index' )}}">Swordfish</a>
+            <a class="navbar-brand" href="{{ url_for( 'main.index' )}}">Projekt Pilgrimsfalk</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for( 'main.index' )}}">Home</a></li>
-                <li><a href="{{ url_for('main.registration') }}">Register for the Event!</a></li>
-                <li><a href="{{ url_for('main.shop') }}">Webshop</a></li>
-                <li><a href="{{ url_for('main.participants') }}">Participants</a></li>
-                <li><a href="{{ url_for('main.information') }}">Information</a></li>
+                                              
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
