Added the falkar view. We kinda have a working application

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,7 @@
                 <li><a href="{{ url_for( 'main.index' )}}">Home</a></li>
                 {% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('main.registrera_falk') }}">Registrera Falk</a></li>
+                <li><a href="{{ url_for('main.falkar')}}">Falkar</a></li>
                 {% endif %}
                                               
             </ul>
